fixed weird bullet sizing on iphone

--- a/style.css
+++ b/style.css
@@ -112,21 +112,21 @@ div {
         width: 100%;
         height: 5px;
         text-align: center;
+        word-spacing: 20px;
     }        
 
         #media #media_thumbs a {
             font-size: 24px;
             margin-bottom: 40px;
+            font-family: monospace;
+            margin-left: 5px;
+            margin-right: 5px;
         }
 
 
         #media #media_thumbs a:hover {
             cursor: pointer;
         }      
-
-            #media #media_thumbs .on {
-                font-size: 25px;
-            }
 
 #about {
     left: 240px;
